# FRL_Smart_Grid

./: .gitignore  main.py  pyproject.toml
analysis/: citylearn_env_eda.ipynb
baseline/: .gitignore  centralized_sac.ipynb  centralized_sac_new_reward.ipynb  federated_rl_sac.ipynb  marl_sac.ipynb  single_house_rbc.ipynb  single_house_sac.ipynb  single_house_sac_new_reward.ipynb
baseline/kpi/: 1_house_sac_vectorized.csv  1_house_sac_vectorized_new_reward.csv  6_house_sac_vectorized.csv  6_house_sac_vectorized_new_reward.csv  single_house_rbc.csv
multi_agent/: Federated_rl_sac_noWARN.ipynb  federated_rl_sac_solar_comfort.ipynb  marl_sac_solar_comfort.ipynb
multi_agent/kpi/: fedrl_sac_solar_comfort.csv  marl_sac_independent_learners.csv  marl_sac_solar_comfort.csv
